tests/purs/failing/ArrayType.out
Error found:
in module [33mMain[0m
at tests/purs/failing/ArrayType.purs:10:7 - 10:8 (line 10, column 7 - line 10, column 8)

  The type
  [33m     [0m
  [33m  Int[0m
  [33m     [0m
  does not match the expected type
  [33m        [0m
  [33m  Number[0m
  [33m        [0m

while checking that expression [33mx[0m
  has type [33mNumber[0m
while applying a function [33mbar[0m
  of type [33mNumber -> Number -> Number[0m
  to argument [33mx[0m
in value declaration [33mfoo[0m

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

